# langraph_supervisor_multi_agent_system

./: config.py  main.py  pyproject.toml  requirement.txt
Mcp/: calender_mcp_config.py  email_mcp_config.py  mcp_client.py
agents/: calender_agent.py  db_agent.py  email_agent.py  supervisor_agent.py
controllers/: auth_controller.py  user_controller.py
graph/: graph.py  state.py
graph/nodes/: calender_agent_node.py  db_agent_node.py  email_agent_node.py  route_node.py  supervisor_agent_node.py
models/: user_model.py
prompts/: calender_agent_prompt.py  db_agent_prompt.py  email_agent_prompt.py  supervisor_agent_prompt.py
routes/: auth_service_route.py  user_router.py
services/: auth_service.py  user_service.py
tools/: calender_agent_tools.py  db_agent_tools.py  email_agent_tools.py
utils/: db.py  llm.py
