[project]
name = "langraph-supervisor-multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-moonshot>=0.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
